feat(): support interactable lines

--- a/bricks/diagram/src/diagram/styles.shadow.css
+++ b/bricks/diagram/src/diagram/styles.shadow.css
@@ -59,3 +59,11 @@
   width: max-content;
   text-align: center;
 }
+
+.lines {
+  pointer-events: none;
+}
+
+.line.interactable {
+  pointer-events: auto;
+}
