--- a/bricks/nav/src/nav-menu/nav-menu.shadow.css
+++ b/bricks/nav/src/nav-menu/nav-menu.shadow.css
@@ -6,7 +6,19 @@
 :host::part(menu-item),
 eo-link {
   display: block;
-  padding: 2px 0px;
+}
+
+eo-menu-item {
+  margin: 4px 0;
+}
+
+.sub-menu-wrapper eo-menu-item:first-child,
+.group-wrapper eo-menu-item:first-child {
+  margin-top: 0;
+}
+
+.sub-menu-wrapper eo-menu-item:last-child {
+  margin-bottom: 0;
 }
 
 .nav-menu-wrapper {
@@ -28,7 +40,7 @@ eo-link {
   min-width: 160px;
   max-height: calc(100vh - 100px);
   background-color: var(--antd-dropdown-menu-bg);
-  padding: 4px 0;
+  padding: 12px 0;
   border-radius: 6px;
   box-shadow: 0px 4px 12px 0px rgba(17, 37, 64, 0.08);
   overflow-x: hidden;
@@ -51,8 +63,9 @@ eo-link {
 .sub-menu-wrapper > .group-wrapper > eo-menu-item .menu-item-label {
   display: block;
   width: 100%;
-  padding: 6px 24px;
+  padding: 7px 24px;
   box-sizing: border-box;
+  line-height: 22px;
   color: var(--color-normal-text);
 }
 .sub-menu-wrapper > eo-popover.subprime .menu-item-label,
@@ -70,7 +83,8 @@ eo-link {
   display: inline-block;
   cursor: pointer;
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 1px 8px;
+  line-height: 22px;
   color: var(--color-normal-text);
 }
 
@@ -82,6 +96,13 @@ eo-link {
   padding-left: 16px;
   font-size: 12px;
   color: var(--palette-gray-7);
+  padding: 8px 16px;
+  line-height: 20px;
+  margin-top: 4px;
+}
+
+.sub-menu-wrapper .group-label:first-child {
+  margin-top: 0px;
 }
 
 .sub-menu-wrapper eo-menu-item[active] .menu-item-label {
