--- a/bricks/containers/src/tab/tab-group/tab.shadow.css
+++ b/bricks/containers/src/tab/tab-group/tab.shadow.css
@@ -15,6 +15,8 @@
 }
 
 :host([outline="none"]),
+:host([type="capsule"]),
+:host([type="text"]),
 :host([type="panel"]) {
   --eo-tabs-border-radius: 0;
   --eo-tabs-header-padding: var(--tabs-header-padding);
@@ -50,16 +52,31 @@
 :host([type="panel"]) .tab-nav {
   padding: 0;
   border-left: 1px solid var(--antd-tabs-title-border-color);
-  background: var(--antd-component-background);
 }
 
 .tab-item-wrapper {
   display: flex;
-  margin-right: 12px;
 }
 
-:host(:not([type="panel"])) .tab-item-wrapper {
-  gap: 20px;
+:host([type="capsule"]) {
+  .tab-nav {
+    &:before {
+      display: none;
+    }
+  }
+  .tab-item-wrapper {
+    background-color: var(--palette-gray-blue-3);
+    border-radius: var(--medius-border-radius);
+    padding: 2px;
+  }
+}
+
+:host([type="text"]) {
+  .tab-nav {
+    &:before {
+      display: none;
+    }
+  }
 }
 
 .content {
