--- a/bricks/containers/src/tab/tab-item/tab-item.shadow.css
+++ b/bricks/containers/src/tab/tab-item/tab-item.shadow.css
@@ -5,39 +5,66 @@
   box-sizing: border-box;
   color: var(--tab-item-default-color);
   height: 100%;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 6px 0;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-weight-400);
+  line-height: 20px;
+  padding: 10px 0;
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
+
+  &:not(.disabled):hover {
+    color: var(--color-brand-hover);
+    .tab-item-icon {
+      color: var(--color-brand-hover);
+    }
+  }
+
+  &:not(.disabled):active {
+    color: var(--color-brand-active);
+    .tab-item-icon {
+      color: var(--color-brand-active);
+    }
+  }
 }
 
 .tab-item-icon {
   font-size: 14px;
   line-height: 1em;
   margin-right: 4px;
+  color: var(--color-auxiliary-text);
 }
 
 .tab-item[aria-selected="true"] {
   color: var(--tab-item-active-color);
   font-weight: var(--font-weight-500);
-}
-
-.tab-item[aria-selected="true"]:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  border-radius: 2px 2px 0 0;
-  background-color: var(--tab-item-active-color);
+  .tab-item-icon {
+    color: var(--tab-item-active-color);
+  }
 }
 
 .tab-item.disabled {
-  color: var(--antd-tabs-title-disabled-color);
+  color: var(--color-disabled-text);
   cursor: not-allowed;
+  .tab-item-icon {
+    color: var(--color-disabled-text);
+  }
+}
+
+:host([type="default"]) {
+  .tab-item[aria-selected="true"]:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-brand);
+  }
+
+  .tab-item-badge {
+    margin-left: 6px;
+  }
 }
 
 :host([type="panel"]) {
@@ -45,20 +72,65 @@
     padding: 4px 20px;
     border-right: 1px solid var(--antd-tabs-title-border-color);
     border-top: 1px solid var(--antd-tabs-title-border-color);
+    background: var(--color-fill-bg-container-4);
   }
   .tab-item[aria-selected="true"] {
     border-top: none;
-    border-bottom: 1px solid var(--antd-tabs-title-wrapper-bg);
+    border-bottom: none;
+  }
+  .tab-item::before {
+    content: "";
+    position: absolute;
+    height: 1px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--antd-tabs-title-border-color);
+  }
+  .tab-item[aria-selected="true"]:before {
+    background-color: var(--color-fill-bg-container-4);
   }
   .tab-item[aria-selected="true"]:after {
-    top: 0;
     bottom: auto;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: 0;
+    left: 0;
+    background-color: var(--color-brand);
+  }
+  .tab-item-badge {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    transform: translate(40%, -25%);
+    z-index: 1;
   }
 }
 
-.tab-item-badge {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  z-index: 1;
+:host([type="capsule"]) {
+  .tab-item {
+    padding: 4px 16px;
+    border-radius: var(--medius-border-radius);
+  }
+
+  .tab-item[aria-selected="true"] {
+    background-color: var(--color-fill-global-bg-1);
+  }
+
+  .tab-item-badge {
+    margin-left: 6px;
+  }
+}
+
+:host([type="text"]) {
+  .tab-item {
+    padding: 4px 16px;
+    border-radius: var(--medius-border-radius);
+  }
+
+  .tab-item-badge {
+    margin-left: 6px;
+  }
 }
