--- a/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
+++ b/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
@@ -10,6 +10,11 @@
   display: flex;
   align-items: center;
   user-select: none;
+  border-radius: 3px;
+
+  &:hover .tree-item-label {
+    color: var(--palette-blue-4);
+  }
 
   .tree-item-indentation {
     flex-shrink: 0;
@@ -20,11 +25,10 @@
     flex: 1;
     display: flex;
     align-items: center;
-    border-radius: 3px;
-    cursor: pointer;
 
-    &:hover .tree-item-label {
-      color: var(--palette-blue-4);
+    .tree-item-expand-button {
+      width: 16px;
+      flex-shrink: 0;
     }
 
     .tree-item-selectable-content {
@@ -32,11 +36,7 @@
       flex: 1;
       display: flex;
       align-items: center;
-
-      .tree-item-expand-button {
-        width: 16px;
-        flex-shrink: 0;
-      }
+      cursor: pointer;
 
       .tree-item-label {
         flex: 1;
@@ -54,11 +54,11 @@
 }
 
 :host([selected]) {
-  .tree-item-content {
+  .tree-item {
     background-color: var(--palette-blue-1);
   }
 
-  .tree-item-content:hover .tree-item-label {
+  .tree-item:hover .tree-item-label {
     color: inherit;
   }
 }
