--- a/bricks/diagram/src/diagram/styles.shadow.css
+++ b/bricks/diagram/src/diagram/styles.shadow.css
@@ -26,9 +26,9 @@
 
 .ready {
   opacity: 1;
+  cursor: grab;
 }
 
-.dragger,
 .lines,
 .line-labels,
 .nodes {
@@ -37,15 +37,14 @@
   left: 0;
 }
 
+.nodes,
+.lines {
+  transform-origin: 0 0;
+}
+
 .node {
   position: absolute;
   visibility: hidden;
-}
-
-.dragger {
-  width: 100%;
-  height: 100%;
-  cursor: grab;
 }
 
 .grabbing {
