feat(): card item add tag

--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -76,6 +76,75 @@ eo-link {
   align-items: center;
 }
 
+eo-tooltip::part(popup) {
+  margin-top: 18px;
+}
+
+.card-tag {
+  position: absolute;
+  box-sizing: border-box;
+  width: 80px;
+  font-size: 12px;
+  text-align: center;
+  transform: rotate(45deg);
+  z-index: 1;
+  color: #fff;
+  transition: transform 0.3s;
+
+  &.color-blue {
+    background-color: var(--palette-blue-6);
+  }
+  &.color-cyan {
+    background-color: var(--palette-cyan-6);
+  }
+  &.color-geekblue {
+    background-color: var(--palette-indigo-6);
+  }
+  &.color-grayblue {
+    background-color: var(--palette-gray-blue-6);
+  }
+  &.color-gray {
+    background-color: var(--palette-gray-6);
+    color: var(--palette-gray-7);
+  }
+  &.color-green {
+    background-color: var(--palette-green-6);
+  }
+  &.color-orange {
+    background-color: var(--palette-orange-6);
+  }
+  &.color-purple {
+    background-color: var(--palette-purple-6);
+  }
+  &.color-red {
+    background-color: var(--palette-red-6);
+  }
+  &.color-yellow {
+    background-color: var(--palette-yellow-6);
+  }
+
+  &.icon-tag {
+    top: -4px;
+    right: -32px;
+    height: 24px;
+    line-height: 32px;
+    eo-icon {
+      transform: rotate(-45deg);
+    }
+  }
+
+  &.text-tag {
+    line-height: 22px;
+    height: 22px;
+    top: 8px;
+    right: -24px;
+  }
+
+  &:hover {
+    transform: rotate(45deg) scale(120%);
+  }
+}
+
 .card-avatar {
   display: flex;
   justify-content: center;
