feat():eo-directory-tree-internal-node support selectable

--- a/bricks/nav/src/directory-tree/directory-tree-internal-node/styles.shadow.css
+++ b/bricks/nav/src/directory-tree/directory-tree-internal-node/styles.shadow.css
@@ -11,9 +11,11 @@
   display: flex;
   align-items: center;
   user-select: none;
+  cursor: pointer;
+  border-radius: 3px;
 
   &:hover .tree-item-label {
-    color: var(--palette-blue-4);
+    color: var(--palette-blue-4) !important;
   }
 
   .tree-item-indentation {
@@ -25,44 +27,40 @@
     flex: 1;
     display: flex;
     align-items: center;
-    border-radius: 3px;
 
-    .tree-item-expandable-content {
+    .tree-item-expand-button {
+      margin: 0 4px;
+      padding: 4px;
+      position: relative;
+      width: 10px;
+      height: 10px;
+      flex-shrink: 0;
+      border-radius: 3px;
+
+      .tree-item-expand-arrow {
+        color: var(--color-header-text);
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transition: all var(--side-bar-collapse-transition-duration)
+          var(--side-bar-collapse-transition-timing-function);
+      }
+    }
+
+    .tree-item-label {
+      color: var(--color-header-text);
       min-width: 0;
       flex: 1;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-
-      .tree-item-expand-button {
-        position: relative;
-        width: 10px;
-        flex-shrink: 0;
-        margin-right: 4px;
-
-        .tree-item-expand-arrow {
-          width: 10px;
-          height: 10px;
-          position: absolute;
-          left: 50%;
-          right: 50%;
-          transition: all var(--side-bar-collapse-transition-duration)
-            var(--side-bar-collapse-transition-timing-function);
-        }
-      }
-
-      .tree-item-label {
-        flex: 1;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
+  }
 
-    .tree-item-suffix {
-      margin-left: 8px;
-      flex-shrink: 0;
-    }
+  .tree-item-suffix {
+    flex-shrink: 0;
   }
 }
 
@@ -97,5 +95,21 @@
 :host(:not([expanded])) {
   .tree-item-expand-arrow {
     transform: translate(-50%, -50%) rotate(90deg);
+  }
+}
+
+:host([selectable]) {
+  .tree-item-expand-button:hover {
+    background-color: var(--color-fill-bg-base-1);
+  }
+}
+
+:host([selectable][selected]) {
+  .tree-item {
+    background-color: var(--palette-blue-1);
+  }
+
+  .tree-item:hover .tree-item-label {
+    color: var(--color-header-text) !important;
   }
 }
