--- a/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
+++ b/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
@@ -11,10 +11,11 @@
   display: flex;
   align-items: center;
   user-select: none;
+  cursor: pointer;
   border-radius: 3px;
 
   &:hover .tree-item-label {
-    color: var(--palette-blue-4);
+    color: var(--palette-blue-4) !important;
   }
 
   .tree-item-indentation {
@@ -28,30 +29,24 @@
     align-items: center;
 
     .tree-item-expand-button {
-      margin-right: 4px;
+      padding: 4px;
+      margin: 0 4px;
       width: 10px;
       flex-shrink: 0;
     }
 
-    .tree-item-selectable-content {
+    .tree-item-label {
+      color: var(--color-header-text);
       min-width: 0;
       flex: 1;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-
-      .tree-item-label {
-        flex: 1;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
+  }
 
-    .tree-item-suffix {
-      margin-left: 8px;
-      flex-shrink: 0;
-    }
+  .tree-item-suffix {
+    flex-shrink: 0;
   }
 }
 
@@ -61,6 +56,6 @@
   }
 
   .tree-item:hover .tree-item-label {
-    color: inherit;
+    color: var(--color-header-text) !important;
   }
 }
