--- a/bricks/basic/src/actions/styles.shadow.css
+++ b/bricks/basic/src/actions/styles.shadow.css
@@ -43,3 +43,29 @@ eo-link {
 .menu-item-danger:not([disabled])::part(menu-item) {
   color: var(--theme-red-color);
 }
+eo-menu-item::part(menu-icon) {
+  margin-right: 8px;
+}
+.popover .sub-menu-item-label {
+  padding: 2px 0px;
+  color: var(--color-normal-text);
+}
+.sub-menu-wrapper {
+  min-width: 160px;
+  max-height: calc(100vh - 100px);
+  background-color: var(--antd-dropdown-menu-bg);
+  padding: 4px 0;
+  border-radius: 6px;
+  box-shadow: 0px 4px 12px 0px rgba(17, 37, 64, 0.08);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.popover .menu-item-selected::part(menu-item) {
+  background-color: var(--app-bar-dropdown-menu-item-hover-bg);
+  color: var(--theme-blue-color);
+  &::after {
+    content: "✓";
+    display: inline-block;
+    padding: 0 5px;
+  }
+}
