--- a/bricks/vs/src/code-editor/index.css
+++ b/bricks/vs/src/code-editor/index.css
@@ -14,3 +14,9 @@
   background: var(--color-border-divider-line);
   border: 1px solid var(--color-border-divider-line);
 }
+
+.monaco-editor .suggest-widget > .tree {
+  position: fixed;
+  width: inherit !important;
+  background-color: var(--color-fill-bg-container-4);
+}
