--- a/bricks/diagram/src/experimental-node/styles.shadow.css
+++ b/bricks/diagram/src/experimental-node/styles.shadow.css
@@ -37,3 +37,13 @@ div {
   align-items: center;
   justify-content: center;
 }
+
+:host([status="highlighted"]) {
+  color: var(--palette-blue-5);
+  background: var(--palette-blue-1);
+  border-color: 1px solid var(--palette-blue-4);
+}
+
+:host([status="faded"]) {
+  opacity: 0.3;
+}
