feat(): 添加hideRightBorder隐藏右边框 CMDB_CONSUME-274

--- a/bricks/nav/src/directory/styles.shadow.css
+++ b/bricks/nav/src/directory/styles.shadow.css
@@ -13,7 +13,9 @@
   overflow-y: auto;
   scrollbar-width: none;
 }
-
+.directory-container-not-border {
+  border-right: none;
+}
 .directory-title {
   font-size: var(--sub-menu-title-font-size);
   margin-bottom: 24px;
