feat(draw-canvas): responsive to node brick size

--- a/bricks/diagram/src/draw-canvas/styles.shadow.css
+++ b/bricks/diagram/src/draw-canvas/styles.shadow.css
@@ -18,6 +18,14 @@
   display: none;
 }
 
+.root {
+  opacity: 0;
+}
+
+.root.ready {
+  opacity: 1;
+}
+
 .root:focus {
   outline: none;
 }
@@ -88,4 +96,12 @@
 
 .cell.faded {
   opacity: 0.3;
+}
+
+.cell .node {
+  pointer-events: none;
+}
+
+.cell .node > * {
+  pointer-events: auto;
 }
