--- a/bricks/basic/src/button/button.shadow.css
+++ b/bricks/basic/src/button/button.shadow.css
@@ -34,7 +34,7 @@ button:active {
 }
 
 .circle {
-  padding: 4px 7px;
+  padding: 4px 8px;
   border-radius: 50%;
 }
 
@@ -270,10 +270,44 @@ button:active {
   border-color: var(--antd-border-color-base) !important;
 }
 
+.icon {
+  display: block;
+  background: #f5f5f5;
+  border: 1px solid transparent;
+}
+
+.icon:hover {
+  background-color: #f0f6ff;
+  color: var(--antd-btn-default-hover-color);
+}
+
+.icon:active {
+  background-color: #f0f6ff;
+  color: var(--antd-btn-default-active-color);
+}
+.icon.large {
+  width: 40px;
+}
+.icon.medium {
+  width: 30px;
+}
+.icon.small {
+  width: 26px;
+}
+.icon.xs {
+  width: 20px;
+}
+
+.icon[disabled],
+.icon[disabled]:hover,
+.icon[disabled]:active {
+  color: var(--text-color-disabled) !important;
+  outline: 1px solid;
+}
 /* size */
 .xs {
   font-size: 10px;
-  height: 22px;
+  height: 20px;
 }
 
 .small {
