feat(): update chart basic dep code

--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -1676,6 +1676,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.readonly .milkdown {
+  margin: 0;
+  padding: 0;
+}
+
 .editor {
   margin-left: auto;
   margin-right: auto;
